--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.8.1
+colorama==0.4.6
 Django==5.1.4
 gunicorn==23.0.0
+iniconfig==2.0.0
 packaging==24.2
 pillow==11.0.0
+pluggy==1.5.0
 psycopg2-binary==2.9.10
+pytest==8.3.4
+pytest-django==4.9.0
 python-dotenv==1.0.1
 sqlparse==0.5.3
 tzdata==2024.2
