fixed ci-cd.yml 3

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,7 +46,7 @@ jobs:
         run: docker-compose -f docker-compose.yml up -d
 
       - name: Run tests in Docker container
-        run: docker-compose exec -T django-blog pytest --maxfail=1 --disable-warnings
+        run: docker-compose exec -T django-app pytest --maxfail=1 --disable-warnings
 
       - name: Shut down Docker Compose
         run: docker-compose down
