--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       EMAIL_HOST_USER: ${EMAIL_HOST_USER}
       EMAIL_HOST_PASSWORD: ${EMAIL_HOST_PASSWORD}
     image: django-blog:v1
-    container_name: django-blog
+    container_name: django-app
     command: gunicorn project.wsgi:application --bind 0.0.0.0:8000
     depends_on:
       - db
